--- a/_notebooks/2022-12-01-Week2Notes.ipynb
+++ b/_notebooks/2022-12-01-Week2Notes.ipynb
@@ -62,7 +62,7 @@
     "- Insert values into a function for a certain output\n",
     "- Splice function splits up different parts of a string\n",
     "- Its a pain to rewrite code multiple times rather than defining it as a function\n",
-    "- Modularity is needed for large coding projects"
+    "- Modularity is needed for large coding projects\n"
    ]
   }
  ],
