--- a/_notebooks/2022-12-12-hw.ipynb
+++ b/_notebooks/2022-12-12-hw.ipynb
@@ -40,8 +40,10 @@
    ],
    "source": [
     "import random\n",
+    "#The below 2 inputs get the maximum and the minimum\n",
     "min = int(input(\"WHat is lowest num\"))\n",
     "max = int(input(\"HIghest num plz\"))\n",
+    "#Sets x to a random value in between the min and maximum\n",
     "x = random.randint(min,max)\n",
     "print(x)"
    ]
@@ -70,12 +72,16 @@
    "source": [
     "# insert your work with randomization/ functions and the mycloset code here # Hint: Use the functions we talked about in the beginning!\n",
     "import random\n",
+    "#The two user inputs ask what items the user wants to change from the myclothes list\n",
     "add = input(\"What do you want to add\")\n",
     "remove = input(\"What you to remove\")\n",
     "def mycloset():\n",
+    "    #List of clothes in the closet\n",
     "    myclothes = [\"red shoes\", \"green pants\", \"tie\", \"belt\"]\n",
+    "    #The below lines add or remove the item from the users closet\n",
     "    myclothes.append(add)\n",
     "    myclothes.remove(remove)\n",
+    "    #Prints a random clothing item from the list\n",
     "    print(random.choice(myclothes))\n",
     "mycloset()\n"
    ]
@@ -125,22 +131,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object is not iterable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 22>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m         \u001b[39mif\u001b[39;00m bit \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39mprint\u001b[39m(survivorstatus[i], \u001b[39m\"\u001b[39m\u001b[39mis a safe\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m survivors(converttobin(randomnum()))\n",
+      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb Cell 8\u001b[0m in \u001b[0;36msurvivors\u001b[0;34m(binary)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m survivorstatus \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mJalen\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mAJ\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mMiles\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mSanders\u001b[39m\u001b[39m\"\u001b[39m , \u001b[39m\"\u001b[39m\u001b[39mJordan\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mLane\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mJason\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mDarius\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m bit \u001b[39min\u001b[39;00m binary:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m bit \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m0\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m         \u001b[39mprint\u001b[39m(survivorstatus[i], \u001b[39m\"\u001b[39m\u001b[39mis a zombie\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     ]
+    }
+   ],
    "source": [
     "# insert your zombie simulation here; you don't have to use this template but it will help you get started\n",
     "\n",
     "import random\n",
-    "n = int(input(\"What is your number\"))\n",
-    "def randomnum(): # function for generating random int\n",
-    "    integer = random.randint(n)\n",
     "\n",
+    "def randomnum(): # function for generating random int\n",
+    "    integer = random.randint(0,255)\n",
+    "    return integer\n",
     "def converttobin(n): # function for converting decimal to binary\n",
-    "    \n",
+    "  binary = str(bin(n)[2:].zfill(8))\n",
+    "\n",
     "\n",
     "def survivors(binary): # function to assign position\n",
-    "    survivorstatus = [\"Jiya\", \"Shruthi\", \"Noor\", \"Ananya\" , \"Peter Parker\", \"Andrew Garfield\", \"Tom Holland\", \"Tobey Maguire\"]\n",
+    "    survivorstatus = [\"Jalen\", \"AJ\", \"Miles\", \"Sanders\" , \"Jordan\", \"Lane\", \"Jason\", \"Darius\"]\n",
+    "    i = 0\n",
+    "    for bit in binary:\n",
+    "        if bit == \"0\":\n",
+    "            print(survivorstatus[i], \"is a zombie\")\n",
+    "        if bit == \"1\":\n",
+    "            print(print(survivorstatus[i], \"is a safe\"))\n",
+    "\n",
+    "\n",
+    "survivors(converttobin(randomnum()))\n",
     "    # replace the names above with your choice of people in the house"
    ]
   },
@@ -173,11 +202,15 @@
    ],
    "source": [
     "import random\n",
+    "#Asks for user input about how many dice rolls they want\n",
     "n = int(input(\"How many dice rolls?\"))\n",
+    "#Function roll\n",
     "def roll(n):\n",
+    "    #Cycles through how many rolls they want\n",
     "    for i in range (n):\n",
-    "        \n",
+    "        #Rolls the dice (getting a random number between 1 and 6)\n",
     "        x = random.randint(1,6)\n",
+    "        #prints the roll of the dice\n",
     "        print(\"Your dice roll is\", x)\n",
     "roll(n)"
    ]
@@ -232,27 +265,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "questions = 6\n",
-    "correct = 0\n",
+    "import random\n",
     "\n",
+    "def quiz():\n",
+    "  # Create a list of questions\n",
+    "  questions = [\n",
+    "    \"A researcher gathers data about the effect of Advanced Placement®︎ classes on students' success in college and career, and develops a simulation to show how a sequence of AP classes affect a hypothetical student's pathway.Several school administrators are concerned that the simulation contains bias favoring high-income students, however.\",\n",
+    "    \"Jack is trying to plan his financial future using an online tool. The tool starts off by asking him to input details about his current finances and career. It then lets him choose different future scenarios, such as having children. For each scenario chosen, the tool does some calculations and outputs his projected savings at the ages of 35, 45, and 55.Would that be considered a simulation and why?\",\n",
+    "    \"Sylvia is an industrial engineer working for a sporting goods company. She is developing a baseball bat that can hit balls with higher accuracy and asks their software engineering team to develop a simulation to verify the design.Which of the following details is most important to include in this simulation?\",\n",
+    "    \"Ashlynn is an industrial engineer who is trying to design a safer parachute. She creates a computer simulation of the parachute opening at different heights and in different environmental conditions.What are advantages of running the simulation versus an actual experiment?\",\n",
+    "    \"What is the use of simulations?\",\n",
+    "    \"What are problems we encounter with simulations\"\n",
+    "  ]\n",
     "\n",
-    "Q1 = input()\n",
-    "if Q1 == :\n",
-    "    \n",
+    "  # Create a list of answers\n",
+    "  answers = [\n",
+    "    \"The simulation may accidentally contain bias due to the exclusion of details\",\n",
+    "    \"Yes, it's a simulation because it is an abstraction of a real world scenario that enables the drawing of inferences.\",\n",
+    "    \"Thomas Edison\",\n",
+    "    \"H\",\n",
+    "    \"Mount Everest\",\n",
+    "    \"\"\n",
+    "  ]\n",
     "\n",
-    "Q2 = input()\n",
-    "if Q2 == :\n",
-    "   \n",
-    "Q3 = input()\n",
-    "if Q3 == :\n",
-    "   \n",
+    "  # Create a list of multiple choice options for each question\n",
+    "  options = [\n",
+    "    [\"Paris\", \"London\", \"Rome\", \"Madrid\"],\n",
+    "    [\"Saturn\", \"Jupiter\", \"Mars\", \"Venus\"],\n",
+    "    [\"Thomas Edison\", \"Benjamin Franklin\", \"Nikola Tesla\", \"Alessandro Volta\"],\n",
+    "    [\"H\", \"He\", \"Li\", \"Be\"],\n",
+    "    [\"Mount Everest\", \"K2\", \"Kangchenjunga\", \"Lhotse\"],\n",
+    "  ]\n",
     "\n",
-    "Q4 = input()\n",
+    "  # Randomly select a question\n",
+    "  question = random.choice(questions)\n",
+    "  print(question)\n",
     "\n",
+    "  # Get the index of the selected question\n",
+    "  index = questions.index(question)\n",
     "\n",
+    "  # Get the correct answer for the selected question\n",
+    "  answer = answers[index]\n",
     "\n",
+    "  # Get the multiple choice options for the selected question\n",
+    "  choices = options[index]\n",
     "\n",
-    "print( \" you scored \" + str(correct) +\"/\" + str(questions))"
+    "  # Print the multiple choice options\n",
+    "  for i, option in enumerate(choices):\n",
+    "    print(str(i+1) + \". \" + option)\n",
+    "\n",
+    "  # Get the user's response to the question\n",
+    "  response = input(\"Your answer: \")\n",
+    "\n",
+    "  # Check if the user's response is correct\n",
+    "  if response.lower() == answer.lower():\n",
+    "    print(\"Correct!\")\n",
+    "  else:\n",
+    "    print(\"Incorrect. The correct answer is: \" + answer)\n",
+    "\n",
+    "quiz()\n"
    ]
   },
   {
