--- a/_posts/2022-12-12-hw.md
+++ b/_posts/2022-12-12-hw.md
@@ -38,8 +38,10 @@ layout: notebook
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
+<span class="c1">#The below 2 inputs get the maximum and the minimum</span>
 <span class="nb">min</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="nb">input</span><span class="p">(</span><span class="s2">&quot;WHat is lowest num&quot;</span><span class="p">))</span>
 <span class="nb">max</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="nb">input</span><span class="p">(</span><span class="s2">&quot;HIghest num plz&quot;</span><span class="p">))</span>
+<span class="c1">#Sets x to a random value in between the min and maximum</span>
 <span class="n">x</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="nb">min</span><span class="p">,</span><span class="nb">max</span><span class="p">)</span>
 <span class="nb">print</span><span class="p">(</span><span class="n">x</span><span class="p">)</span>
 </pre></div>
@@ -79,12 +81,16 @@ layout: notebook
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
+<span class="c1">#The two user inputs ask what items the user wants to change from the myclothes list</span>
 <span class="n">add</span> <span class="o">=</span> <span class="nb">input</span><span class="p">(</span><span class="s2">&quot;What do you want to add&quot;</span><span class="p">)</span>
 <span class="n">remove</span> <span class="o">=</span> <span class="nb">input</span><span class="p">(</span><span class="s2">&quot;What you to remove&quot;</span><span class="p">)</span>
 <span class="k">def</span> <span class="nf">mycloset</span><span class="p">():</span>
+    <span class="c1">#List of clothes in the closet</span>
     <span class="n">myclothes</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;red shoes&quot;</span><span class="p">,</span> <span class="s2">&quot;green pants&quot;</span><span class="p">,</span> <span class="s2">&quot;tie&quot;</span><span class="p">,</span> <span class="s2">&quot;belt&quot;</span><span class="p">]</span>
+    <span class="c1">#The below lines add or remove the item from the users closet</span>
     <span class="n">myclothes</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">add</span><span class="p">)</span>
     <span class="n">myclothes</span><span class="o">.</span><span class="n">remove</span><span class="p">(</span><span class="n">remove</span><span class="p">)</span>
+    <span class="c1">#Prints a random clothing item from the list</span>
     <span class="nb">print</span><span class="p">(</span><span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="n">myclothes</span><span class="p">))</span>
 <span class="n">mycloset</span><span class="p">()</span>
 </pre></div>
@@ -174,19 +180,57 @@ Heads
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
-<span class="n">n</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="nb">input</span><span class="p">(</span><span class="s2">&quot;What is your number&quot;</span><span class="p">))</span>
-<span class="k">def</span> <span class="nf">randomnum</span><span class="p">():</span> <span class="c1"># function for generating random int</span>
-    <span class="n">integer</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="n">n</span><span class="p">)</span>
 
+<span class="k">def</span> <span class="nf">randomnum</span><span class="p">():</span> <span class="c1"># function for generating random int</span>
+    <span class="n">integer</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">0</span><span class="p">,</span><span class="mi">255</span><span class="p">)</span>
+    <span class="k">return</span> <span class="n">integer</span>
 <span class="k">def</span> <span class="nf">converttobin</span><span class="p">(</span><span class="n">n</span><span class="p">):</span> <span class="c1"># function for converting decimal to binary</span>
-    
+  <span class="n">binary</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="nb">bin</span><span class="p">(</span><span class="n">n</span><span class="p">)[</span><span class="mi">2</span><span class="p">:]</span><span class="o">.</span><span class="n">zfill</span><span class="p">(</span><span class="mi">8</span><span class="p">))</span>
+
 
 <span class="k">def</span> <span class="nf">survivors</span><span class="p">(</span><span class="n">binary</span><span class="p">):</span> <span class="c1"># function to assign position</span>
-    <span class="n">survivorstatus</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;Jiya&quot;</span><span class="p">,</span> <span class="s2">&quot;Shruthi&quot;</span><span class="p">,</span> <span class="s2">&quot;Noor&quot;</span><span class="p">,</span> <span class="s2">&quot;Ananya&quot;</span> <span class="p">,</span> <span class="s2">&quot;Peter Parker&quot;</span><span class="p">,</span> <span class="s2">&quot;Andrew Garfield&quot;</span><span class="p">,</span> <span class="s2">&quot;Tom Holland&quot;</span><span class="p">,</span> <span class="s2">&quot;Tobey Maguire&quot;</span><span class="p">]</span>
+    <span class="n">survivorstatus</span> <span class="o">=</span> <span class="p">[</span><span class="s2">&quot;Jalen&quot;</span><span class="p">,</span> <span class="s2">&quot;AJ&quot;</span><span class="p">,</span> <span class="s2">&quot;Miles&quot;</span><span class="p">,</span> <span class="s2">&quot;Sanders&quot;</span> <span class="p">,</span> <span class="s2">&quot;Jordan&quot;</span><span class="p">,</span> <span class="s2">&quot;Lane&quot;</span><span class="p">,</span> <span class="s2">&quot;Jason&quot;</span><span class="p">,</span> <span class="s2">&quot;Darius&quot;</span><span class="p">]</span>
+    <span class="n">i</span> <span class="o">=</span> <span class="mi">0</span>
+    <span class="k">for</span> <span class="n">bit</span> <span class="ow">in</span> <span class="n">binary</span><span class="p">:</span>
+        <span class="k">if</span> <span class="n">bit</span> <span class="o">==</span> <span class="s2">&quot;0&quot;</span><span class="p">:</span>
+            <span class="nb">print</span><span class="p">(</span><span class="n">survivorstatus</span><span class="p">[</span><span class="n">i</span><span class="p">],</span> <span class="s2">&quot;is a zombie&quot;</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">bit</span> <span class="o">==</span> <span class="s2">&quot;1&quot;</span><span class="p">:</span>
+            <span class="nb">print</span><span class="p">(</span><span class="nb">print</span><span class="p">(</span><span class="n">survivorstatus</span><span class="p">[</span><span class="n">i</span><span class="p">],</span> <span class="s2">&quot;is a safe&quot;</span><span class="p">))</span>
+
+
+<span class="n">survivors</span><span class="p">(</span><span class="n">converttobin</span><span class="p">(</span><span class="n">randomnum</span><span class="p">()))</span>
     <span class="c1"># replace the names above with your choice of people in the house</span>
 </pre></div>
 
     </div>
+</div>
+</div>
+
+<div class="output_wrapper">
+<div class="output">
+
+<div class="output_area">
+
+<div class="output_subarea output_text output_error">
+<pre>
+<span class="ansi-red-fg">---------------------------------------------------------------------------</span>
+<span class="ansi-red-fg">TypeError</span>                                 Traceback (most recent call last)
+<span class="ansi-green-intense-fg ansi-bold">/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb Cell 8</span> in <span class="ansi-cyan-fg">&lt;cell line: 22&gt;</span><span class="ansi-blue-fg">()</span>
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17&#39;&gt;18&lt;/a&gt;</span>         if bit == &#34;1&#34;:
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18&#39;&gt;19&lt;/a&gt;</span>             print(print(survivorstatus[i], &#34;is a safe&#34;))
+<span class="ansi-green-fg">---&gt; &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21&#39;&gt;22&lt;/a&gt;</span> survivors(converttobin(randomnum()))
+
+<span class="ansi-green-intense-fg ansi-bold">/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb Cell 8</span> in <span class="ansi-cyan-fg">survivors</span><span class="ansi-blue-fg">(binary)</span>
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12&#39;&gt;13&lt;/a&gt;</span> survivorstatus = [&#34;Jalen&#34;, &#34;AJ&#34;, &#34;Miles&#34;, &#34;Sanders&#34; , &#34;Jordan&#34;, &#34;Lane&#34;, &#34;Jason&#34;, &#34;Darius&#34;]
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13&#39;&gt;14&lt;/a&gt;</span> i = 0
+<span class="ansi-green-fg">---&gt; &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14&#39;&gt;15&lt;/a&gt;</span> for bit in binary:
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15&#39;&gt;16&lt;/a&gt;</span>     if bit == &#34;0&#34;:
+<span class="ansi-green-intense-fg ansi-bold">     &lt;a href=&#39;vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16&#39;&gt;17&lt;/a&gt;</span>         print(survivorstatus[i], &#34;is a zombie&#34;)
+
+<span class="ansi-red-fg">TypeError</span>: &#39;NoneType&#39; object is not iterable</pre>
+</div>
+</div>
+
 </div>
 </div>
 
@@ -211,11 +255,15 @@ Heads
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
+<span class="c1">#Asks for user input about how many dice rolls they want</span>
 <span class="n">n</span> <span class="o">=</span> <span class="nb">int</span><span class="p">(</span><span class="nb">input</span><span class="p">(</span><span class="s2">&quot;How many dice rolls?&quot;</span><span class="p">))</span>
+<span class="c1">#Function roll</span>
 <span class="k">def</span> <span class="nf">roll</span><span class="p">(</span><span class="n">n</span><span class="p">):</span>
+    <span class="c1">#Cycles through how many rolls they want</span>
     <span class="k">for</span> <span class="n">i</span> <span class="ow">in</span> <span class="nb">range</span> <span class="p">(</span><span class="n">n</span><span class="p">):</span>
-        
+        <span class="c1">#Rolls the dice (getting a random number between 1 and 6)</span>
         <span class="n">x</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">randint</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span><span class="mi">6</span><span class="p">)</span>
+        <span class="c1">#prints the roll of the dice</span>
         <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Your dice roll is&quot;</span><span class="p">,</span> <span class="n">x</span><span class="p">)</span>
 <span class="n">roll</span><span class="p">(</span><span class="n">n</span><span class="p">)</span>
 </pre></div>
@@ -309,27 +357,65 @@ Your dice roll is 6
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">questions</span> <span class="o">=</span> <span class="mi">6</span>
-<span class="n">correct</span> <span class="o">=</span> <span class="mi">0</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">random</span>
 
+<span class="k">def</span> <span class="nf">quiz</span><span class="p">():</span>
+  <span class="c1"># Create a list of questions</span>
+  <span class="n">questions</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="s2">&quot;A researcher gathers data about the effect of Advanced Placement®︎ classes on students&#39; success in college and career, and develops a simulation to show how a sequence of AP classes affect a hypothetical student&#39;s pathway.Several school administrators are concerned that the simulation contains bias favoring high-income students, however.&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;Jack is trying to plan his financial future using an online tool. The tool starts off by asking him to input details about his current finances and career. It then lets him choose different future scenarios, such as having children. For each scenario chosen, the tool does some calculations and outputs his projected savings at the ages of 35, 45, and 55.Would that be considered a simulation and why?&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;Sylvia is an industrial engineer working for a sporting goods company. She is developing a baseball bat that can hit balls with higher accuracy and asks their software engineering team to develop a simulation to verify the design.Which of the following details is most important to include in this simulation?&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;Ashlynn is an industrial engineer who is trying to design a safer parachute. She creates a computer simulation of the parachute opening at different heights and in different environmental conditions.What are advantages of running the simulation versus an actual experiment?&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;What is the use of simulations?&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;What are problems we encounter with simulations&quot;</span>
+  <span class="p">]</span>
 
-<span class="n">Q1</span> <span class="o">=</span> <span class="nb">input</span><span class="p">()</span>
-<span class="k">if</span> <span class="n">Q1</span> <span class="o">==</span> <span class="p">:</span>
-    
+  <span class="c1"># Create a list of answers</span>
+  <span class="n">answers</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="s2">&quot;The simulation may accidentally contain bias due to the exclusion of details&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;Yes, it&#39;s a simulation because it is an abstraction of a real world scenario that enables the drawing of inferences.&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;Thomas Edison&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;H&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;Mount Everest&quot;</span><span class="p">,</span>
+    <span class="s2">&quot;&quot;</span>
+  <span class="p">]</span>
 
-<span class="n">Q2</span> <span class="o">=</span> <span class="nb">input</span><span class="p">()</span>
-<span class="k">if</span> <span class="n">Q2</span> <span class="o">==</span> <span class="p">:</span>
-   
-<span class="n">Q3</span> <span class="o">=</span> <span class="nb">input</span><span class="p">()</span>
-<span class="k">if</span> <span class="n">Q3</span> <span class="o">==</span> <span class="p">:</span>
-   
+  <span class="c1"># Create a list of multiple choice options for each question</span>
+  <span class="n">options</span> <span class="o">=</span> <span class="p">[</span>
+    <span class="p">[</span><span class="s2">&quot;Paris&quot;</span><span class="p">,</span> <span class="s2">&quot;London&quot;</span><span class="p">,</span> <span class="s2">&quot;Rome&quot;</span><span class="p">,</span> <span class="s2">&quot;Madrid&quot;</span><span class="p">],</span>
+    <span class="p">[</span><span class="s2">&quot;Saturn&quot;</span><span class="p">,</span> <span class="s2">&quot;Jupiter&quot;</span><span class="p">,</span> <span class="s2">&quot;Mars&quot;</span><span class="p">,</span> <span class="s2">&quot;Venus&quot;</span><span class="p">],</span>
+    <span class="p">[</span><span class="s2">&quot;Thomas Edison&quot;</span><span class="p">,</span> <span class="s2">&quot;Benjamin Franklin&quot;</span><span class="p">,</span> <span class="s2">&quot;Nikola Tesla&quot;</span><span class="p">,</span> <span class="s2">&quot;Alessandro Volta&quot;</span><span class="p">],</span>
+    <span class="p">[</span><span class="s2">&quot;H&quot;</span><span class="p">,</span> <span class="s2">&quot;He&quot;</span><span class="p">,</span> <span class="s2">&quot;Li&quot;</span><span class="p">,</span> <span class="s2">&quot;Be&quot;</span><span class="p">],</span>
+    <span class="p">[</span><span class="s2">&quot;Mount Everest&quot;</span><span class="p">,</span> <span class="s2">&quot;K2&quot;</span><span class="p">,</span> <span class="s2">&quot;Kangchenjunga&quot;</span><span class="p">,</span> <span class="s2">&quot;Lhotse&quot;</span><span class="p">],</span>
+  <span class="p">]</span>
 
-<span class="n">Q4</span> <span class="o">=</span> <span class="nb">input</span><span class="p">()</span>
+  <span class="c1"># Randomly select a question</span>
+  <span class="n">question</span> <span class="o">=</span> <span class="n">random</span><span class="o">.</span><span class="n">choice</span><span class="p">(</span><span class="n">questions</span><span class="p">)</span>
+  <span class="nb">print</span><span class="p">(</span><span class="n">question</span><span class="p">)</span>
 
+  <span class="c1"># Get the index of the selected question</span>
+  <span class="n">index</span> <span class="o">=</span> <span class="n">questions</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">question</span><span class="p">)</span>
 
+  <span class="c1"># Get the correct answer for the selected question</span>
+  <span class="n">answer</span> <span class="o">=</span> <span class="n">answers</span><span class="p">[</span><span class="n">index</span><span class="p">]</span>
 
+  <span class="c1"># Get the multiple choice options for the selected question</span>
+  <span class="n">choices</span> <span class="o">=</span> <span class="n">options</span><span class="p">[</span><span class="n">index</span><span class="p">]</span>
 
-<span class="nb">print</span><span class="p">(</span> <span class="s2">&quot; you scored &quot;</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">correct</span><span class="p">)</span> <span class="o">+</span><span class="s2">&quot;/&quot;</span> <span class="o">+</span> <span class="nb">str</span><span class="p">(</span><span class="n">questions</span><span class="p">))</span>
+  <span class="c1"># Print the multiple choice options</span>
+  <span class="k">for</span> <span class="n">i</span><span class="p">,</span> <span class="n">option</span> <span class="ow">in</span> <span class="nb">enumerate</span><span class="p">(</span><span class="n">choices</span><span class="p">):</span>
+    <span class="nb">print</span><span class="p">(</span><span class="nb">str</span><span class="p">(</span><span class="n">i</span><span class="o">+</span><span class="mi">1</span><span class="p">)</span> <span class="o">+</span> <span class="s2">&quot;. &quot;</span> <span class="o">+</span> <span class="n">option</span><span class="p">)</span>
+
+  <span class="c1"># Get the user&#39;s response to the question</span>
+  <span class="n">response</span> <span class="o">=</span> <span class="nb">input</span><span class="p">(</span><span class="s2">&quot;Your answer: &quot;</span><span class="p">)</span>
+
+  <span class="c1"># Check if the user&#39;s response is correct</span>
+  <span class="k">if</span> <span class="n">response</span><span class="o">.</span><span class="n">lower</span><span class="p">()</span> <span class="o">==</span> <span class="n">answer</span><span class="o">.</span><span class="n">lower</span><span class="p">():</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Correct!&quot;</span><span class="p">)</span>
+  <span class="k">else</span><span class="p">:</span>
+    <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;Incorrect. The correct answer is: &quot;</span> <span class="o">+</span> <span class="n">answer</span><span class="p">)</span>
+
+<span class="n">quiz</span><span class="p">()</span>
 </pre></div>
 
     </div>
