--- a/_notebooks/2022-12-12-hw.ipynb
+++ b/_notebooks/2022-12-12-hw.ipynb
@@ -22,7 +22,7 @@
     "- Its impossible to factor everything into a simulation(the results may be a bit skewed)\n",
     "- The importance of simulaitons is to have test cases\n",
     "- Account for the importance of the simulations ideas \n",
-    "- Random gives random "
+    "- Random gives a random output which means it can always vary"
    ]
   },
   {
@@ -57,15 +57,24 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the output I added jordans and removed tie from the list"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jordans\n"
+      "red shoes\n",
+      "['red shoes', 'green pants', 'belt', 'jordans']\n"
      ]
     }
    ],
@@ -83,6 +92,7 @@
     "    myclothes.remove(remove)\n",
     "    #Prints a random clothing item from the list\n",
     "    print(random.choice(myclothes))\n",
+    "    print(myclothes)\n",
     "mycloset()\n"
    ]
   },
@@ -131,44 +141,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb Cell 8\u001b[0m in \u001b[0;36m<cell line: 22>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=17'>18</a>\u001b[0m         \u001b[39mif\u001b[39;00m bit \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m1\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=18'>19</a>\u001b[0m             \u001b[39mprint\u001b[39m(\u001b[39mprint\u001b[39m(survivorstatus[i], \u001b[39m\"\u001b[39m\u001b[39mis a safe\u001b[39m\u001b[39m\"\u001b[39m))\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=21'>22</a>\u001b[0m survivors(converttobin(randomnum()))\n",
-      "\u001b[1;32m/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb Cell 8\u001b[0m in \u001b[0;36msurvivors\u001b[0;34m(binary)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=12'>13</a>\u001b[0m survivorstatus \u001b[39m=\u001b[39m [\u001b[39m\"\u001b[39m\u001b[39mJalen\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mAJ\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mMiles\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mSanders\u001b[39m\u001b[39m\"\u001b[39m , \u001b[39m\"\u001b[39m\u001b[39mJordan\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mLane\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mJason\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mDarius\u001b[39m\u001b[39m\"\u001b[39m]\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=13'>14</a>\u001b[0m i \u001b[39m=\u001b[39m \u001b[39m0\u001b[39m\n\u001b[0;32m---> <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39mfor\u001b[39;00m bit \u001b[39min\u001b[39;00m binary:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m bit \u001b[39m==\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m0\u001b[39m\u001b[39m\"\u001b[39m:\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu-22.04/home/prasithchilla/Fastpages/_notebooks/2022-12-12-hw.ipynb#X10sdnNjb2RlLXJlbW90ZQ%3D%3D?line=16'>17</a>\u001b[0m         \u001b[39mprint\u001b[39m(survivorstatus[i], \u001b[39m\"\u001b[39m\u001b[39mis a zombie\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jalen is a safe\n",
+      "AJ is a zombie\n",
+      "Miles is a zombie\n",
+      "Sanders is a safe\n",
+      "Jordan is a safe\n",
+      "Lane is a zombie\n",
+      "Jason is a zombie\n",
+      "Darius is a zombie\n"
      ]
     }
    ],
    "source": [
     "# insert your zombie simulation here; you don't have to use this template but it will help you get started\n",
-    "\n",
+    "#imports the random library\n",
     "import random\n",
     "\n",
     "def randomnum(): # function for generating random int\n",
+    "    # sets the variable integer as a random number from 0-255\n",
     "    integer = random.randint(0,255)\n",
     "    return integer\n",
     "def converttobin(n): # function for converting decimal to binary\n",
+    "    # converts binary to decimal for 8 bits\n",
     "  binary = str(bin(n)[2:].zfill(8))\n",
-    "\n",
+    "  return binary\n",
     "\n",
     "def survivors(binary): # function to assign position\n",
+    "    # sets all the survivors\n",
     "    survivorstatus = [\"Jalen\", \"AJ\", \"Miles\", \"Sanders\" , \"Jordan\", \"Lane\", \"Jason\", \"Darius\"]\n",
+    "    # counts as we go through each bit of the binary number\n",
     "    i = 0\n",
+    "    #Iterates through every bit in the binary number\n",
     "    for bit in binary:\n",
+    "        #Checks whether the bit is 0 and if it is prints that the person is a zombie\n",
     "        if bit == \"0\":\n",
     "            print(survivorstatus[i], \"is a zombie\")\n",
+    "            i +=1\n",
+    "        #Checks if the bit is 1 if it is the person is safe\n",
     "        if bit == \"1\":\n",
-    "            print(print(survivorstatus[i], \"is a safe\"))\n",
-    "\n",
-    "\n",
+    "            print(survivorstatus[i], \"is a safe\")\n",
+    "            i +=1 \n",
     "survivors(converttobin(randomnum()))\n",
     "    # replace the names above with your choice of people in the house"
    ]
@@ -261,69 +280,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your answer is correct\n",
+      "Your answer is correct\n",
+      "Your answer is correct\n",
+      "Your answer is correct\n",
+      "Your answer is correct\n",
+      "Your answer is correct\n",
+      "You scored  6 / 6 , which is  100.0 %\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
+    "#Defines how the question is asked\n",
+    "def question_and_answer(prompt):\n",
+    "    # This gets the users answer\n",
+    "    message = input(\"Question:\" +prompt)\n",
+    "    print(\"Answer:\" +message)\n",
+    "# This part is for the format of the question being asked\n",
+    "def question_with_response(prompt):\n",
+    "    message = input(\"Question: \" + prompt)\n",
+    "    return message\n",
+    "#Sets the list of questions\n",
+    "questions_list = [\"A researcher gathers data about the effect of Advanced Placement®︎ classes on students' success in college and career, and develops a simulation to show how a sequence of AP classes affect a hypothetical student's pathway.Several school administrators are concerned that the simulation contains bias favoring high-income students, however. \\n(1) The simulation is an abstraction and therefore cannot contain any bias\\n (2) The simulation may accidentally contain bias due to the exclusion of details\\n (3) If the simulation is found to contain bias, then it is not possible to remove the bias from the simulation\\n (4) The only way for the simulation to be biased is if the researcher intentionally used data that favored their desired output\",\n",
+    "    \"Jack is trying to plan his financial future using an online tool. The tool starts off by asking him to input details about his current finances and career. It then lets him choose different future scenarios, such as having children. For each scenario chosen, the tool does some calculations and outputs his projected savings at the ages of 35, 45, and 55.Would that be considered a simulation and why?\\n (1) No, it's not a simulation because it does not include a visualization of the results.\\n (2) No, it's not a simulation because it does not include all the details of his life history and the future financial environment\\n (3) Yes, it's a simulation because it runs on a computer and includes both user input and computed output.\\n (4) Yes, it's a simulation because it is an abstraction of a real world scenario that enables the drawing of inferences.\",\n",
+    "    \"Sylvia is an industrial engineer working for a sporting goods company. She is developing a baseball bat that can hit balls with higher accuracy and asks their software engineering team to develop a simulation to verify the design.Which of the following details is most important to include in this simulation?\\n (1) Realistic sound effects based on the material of the baseball bat and the velocity of the hit\\n (2) A depiction of an audience in the stands with lifelike behavior in response to hit accuracy\\n (3) Accurate accounting for the effects of wind conditions on the movement of the ball\\n (4) A baseball field that is textured to differentiate between the grass and the dirt\",\n",
+    "    \"Ashlynn is an industrial engineer who is trying to design a safer parachute. She creates a computer simulation of the parachute opening at different heights and in different environmental conditions.What are advantages of running the simulation versus an actual experiment?\\n (1) The simulation will not contain any bias that favors one body type over another, while an experiment will be biased\\n (2) The simulation can be run more safely than an actual experiment\\n (3) The simulation will accurately predict the parachute's safety level, while an experiment may be inaccurate due to faulty experimental design\\n (4) The simulation can't test the parachute design in a wide range of environmental conditions that may be difficult to reliably reproduce in an experiment\",\n",
+    "    \"What is a simulation is used to mimic?\\n (1) earth\\n (2) video games\\n (3) random\\n (4) life\",\n",
+    "    \"Why do we use simulations\\n (1) To test real world problems\\n (2) To get the most accurate result\\n (3) To create a game\\n (4) To make life more fun for everyone\"\n",
+    "            ]       \n",
     "\n",
-    "def quiz():\n",
-    "  # Create a list of questions\n",
-    "  questions = [\n",
-    "    \"A researcher gathers data about the effect of Advanced Placement®︎ classes on students' success in college and career, and develops a simulation to show how a sequence of AP classes affect a hypothetical student's pathway.Several school administrators are concerned that the simulation contains bias favoring high-income students, however.\",\n",
-    "    \"Jack is trying to plan his financial future using an online tool. The tool starts off by asking him to input details about his current finances and career. It then lets him choose different future scenarios, such as having children. For each scenario chosen, the tool does some calculations and outputs his projected savings at the ages of 35, 45, and 55.Would that be considered a simulation and why?\",\n",
-    "    \"Sylvia is an industrial engineer working for a sporting goods company. She is developing a baseball bat that can hit balls with higher accuracy and asks their software engineering team to develop a simulation to verify the design.Which of the following details is most important to include in this simulation?\",\n",
-    "    \"Ashlynn is an industrial engineer who is trying to design a safer parachute. She creates a computer simulation of the parachute opening at different heights and in different environmental conditions.What are advantages of running the simulation versus an actual experiment?\",\n",
-    "    \"What is the use of simulations?\",\n",
-    "    \"What are problems we encounter with simulations\"\n",
-    "  ]\n",
+    "#sets the answers to check for\n",
+    "answers_list = [\n",
+    "    \"2\",\n",
+    "    \"3\",\n",
+    "    \"3\",\n",
+    "    \"2,4\",\n",
+    "    \"4\",\n",
+    "    \"1\"\n",
+    "]\n",
     "\n",
-    "  # Create a list of answers\n",
-    "  answers = [\n",
-    "    \"The simulation may accidentally contain bias due to the exclusion of details\",\n",
-    "    \"Yes, it's a simulation because it is an abstraction of a real world scenario that enables the drawing of inferences.\",\n",
-    "    \"Thomas Edison\",\n",
-    "    \"H\",\n",
-    "    \"Mount Everest\",\n",
-    "    \"\"\n",
-    "  ]\n",
+    "questions = len(questions_list)\n",
+    "score = 0\n",
     "\n",
-    "  # Create a list of multiple choice options for each question\n",
-    "  options = [\n",
-    "    [\"Paris\", \"London\", \"Rome\", \"Madrid\"],\n",
-    "    [\"Saturn\", \"Jupiter\", \"Mars\", \"Venus\"],\n",
-    "    [\"Thomas Edison\", \"Benjamin Franklin\", \"Nikola Tesla\", \"Alessandro Volta\"],\n",
-    "    [\"H\", \"He\", \"Li\", \"Be\"],\n",
-    "    [\"Mount Everest\", \"K2\", \"Kangchenjunga\", \"Lhotse\"],\n",
-    "  ]\n",
+    "for i in range(len(questions_list)):\n",
+    "        user_response = question_with_response(questions_list[i])\n",
+    "        if user_response == answers_list[i]:\n",
+    "            print(\"Your answer is correct\")\n",
+    "            score += 1\n",
+    "## If the answer the user inputted doesn't match any of the answers on the list (again depending on question), they will get a message saying they are wrong.\n",
+    "        else:\n",
+    "            print(\"Your answer is incorrect\")\n",
     "\n",
-    "  # Randomly select a question\n",
-    "  question = random.choice(questions)\n",
-    "  print(question)\n",
-    "\n",
-    "  # Get the index of the selected question\n",
-    "  index = questions.index(question)\n",
-    "\n",
-    "  # Get the correct answer for the selected question\n",
-    "  answer = answers[index]\n",
-    "\n",
-    "  # Get the multiple choice options for the selected question\n",
-    "  choices = options[index]\n",
-    "\n",
-    "  # Print the multiple choice options\n",
-    "  for i, option in enumerate(choices):\n",
-    "    print(str(i+1) + \". \" + option)\n",
-    "\n",
-    "  # Get the user's response to the question\n",
-    "  response = input(\"Your answer: \")\n",
-    "\n",
-    "  # Check if the user's response is correct\n",
-    "  if response.lower() == answer.lower():\n",
-    "    print(\"Correct!\")\n",
-    "  else:\n",
-    "    print(\"Incorrect. The correct answer is: \" + answer)\n",
-    "\n",
-    "quiz()\n"
+    "## After completing the quiz, the user will get their score out of 6 and the percentage\n",
+    "print(\"You scored \" ,str(score) ,\"/\" , str(questions) , \", which is \" , str((score / questions) * 100) , \"%\")"
    ]
   },
   {
