--- a/_notebooks/2022-12-12-hw.ipynb
+++ b/_notebooks/2022-12-12-hw.ipynb
@@ -367,7 +367,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "my code simulates who will win an nfl game played 10 times. "
+    "my code simulates who will win an nfl game between the eagles and cowboys played 10 times. "
    ]
   },
   {
