--- a/_notebooks/2022-12-14-117-118-homework.ipynb
+++ b/_notebooks/2022-12-14-117-118-homework.ipynb
@@ -101,6 +101,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.16485977172851562 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "numlist = set([1,3,5,7,9,11,13,15,17,19])\n",
+    "valuelist = set([0,3,6,9,12,15,18,21])\n",
+    "\n",
+    "def isvalue(value, array):\n",
+    "    return value in array\n",
+    "\n",
+    "starttime = time.time()\n",
+    "for i in range(100000):\n",
+    "    for i in valueset:\n",
+    "        x = isvalue(i, numset)\n",
+    "endtime = time.time()\n",
+    "print(endtime-starttime, 'seconds')\n"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -217,7 +246,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6 (main, Aug 10 2022, 11:40:04) [GCC 11.3.0]"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
