--- a/_notebooks/2022-12-14-117-118-homework.ipynb
+++ b/_notebooks/2022-12-14-117-118-homework.ipynb
@@ -160,23 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# RUN THIS CODE --- DO NOT EDIT\n",
     "dataset = {\n",
-    "    'DelNorte':{\n",
+    "    'Del Norte':{\n",
     "        'Westview':15,\n",
     "        'MtCarmel':20,\n",
     "        'Poway':35,\n",
-    "        'RanchoBernrdo':50\n",
+    "        'RanchoBernardo':50\n",
     "    },\n",
     "    'Westview':{\n",
     "        'Del Norte':15,\n",
     "        'MtCarmel':35,\n",
     "        'Poway':25,\n",
-    "        'RanchoBernrdo': 45\n",
+    "        'RanchoBernardo': 45\n",
     "    },\n",
     "    'MtCarmel':{\n",
     "        'Westview':35,\n",
@@ -188,7 +187,7 @@
     "        'Westview':25,\n",
     "        'MtCarmel':40,\n",
     "        'Del Norte':35,\n",
-    "        'RanchoBernrdo':15\n",
+    "        'RanchoBernardo':15\n",
     "    },\n",
     "    'RanchoBernardo':{\n",
     "        'Westview':45,\n",
@@ -196,24 +195,57 @@
     "        'Poway':15,\n",
     "        'Del Norte':50\n",
     "    }\n",
-    "}"
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The fastest route starting at Del Norte is ['Del Norte', 'Del Norte', 'Westview', 'Del Norte', 'MtCarmel', 'Del Norte', 'Poway', 'Del Norte', 'RanchoBernardo', 'Del Norte', 'Westview', 'MtCarmel', 'Del Norte', 'Westview', 'Poway', 'Del Norte', 'Westview', 'RanchoBernardo', 'Del Norte', 'MtCarmel', 'Poway', 'Del Norte', 'MtCarmel', 'RanchoBernardo', 'Del Norte', 'Poway', 'RanchoBernardo'] with a total distance of 50.\n"
+     ]
+    }
+   ],
    "source": [
-    "def fastestroute(start,data):\n",
-    "    drivetime = 0\n",
-    "    order = []\n",
-    "    #CODE,CODE,CODE\n",
-    "    drivetime = dataset[RanchoBernardo[Westview]]\n",
-    "    return(drivetime,order)\n",
+    "from collections import deque\n",
     "\n",
-    "start = 'DelNorte'\n",
-    "# 'dataset' is the name of the nested key value pair"
+    "def find_fastest_route(dataset, start):\n",
+    "  # Create a queue to store the locations to visit and the path from the start location to each location\n",
+    "  queue = deque([(start, [start])])\n",
+    "  # Create a set to store the visited locations\n",
+    "  visited = set()\n",
+    "  # Create a list to store the paths for each location\n",
+    "  paths = []\n",
+    "  \n",
+    "  while queue:\n",
+    "    # Get the next location in the queue\n",
+    "    location, path = queue.popleft()\n",
+    "    # Mark the location as visited\n",
+    "    visited.add(location)\n",
+    "    # Add the path for the current location to the list of paths\n",
+    "    paths.append(path)\n",
+    "    # Add all the unvisited locations reachable from the current location to the queue, along with the updated path\n",
+    "    for neighbor in dataset[location]:\n",
+    "      if neighbor not in visited:\n",
+    "        queue.append((neighbor, path + [neighbor]))\n",
+    "  \n",
+    "  # Reconstruct the full route by concatenating the paths for each location\n",
+    "  full_route = [path for path_list in paths for path in path_list]\n",
+    "  \n",
+    "  # Calculate the total distance of the route\n",
+    "  total_distance = sum(dataset[path[i]][path[i+1]] for i in range(len(path) - 1))\n",
+    "  \n",
+    "  return full_route, total_distance\n",
+    "\n",
+    "# Test the function\n",
+    "start = 'Del Norte'\n",
+    "fastest_route, total_distance = find_fastest_route(dataset, start)\n",
+    "print(f'The fastest route starting at {start} is {fastest_route} with a total distance of {total_distance}.')\n"
    ]
   },
   {
